<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme">

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/resetpassword"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/inter"
        android:justificationMode="inter_word"
        android:text="@string/restmsg"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_top2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/recovertEmail"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/inter" />

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:fontFamily="@font/inter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_pass"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/inter" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
