<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white2">
    <include
        android:id="@+id/mapheader"
        layout="@layout/addserviceheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/inter"
            android:textSize="15sp"
            android:hint="@string/service_name"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/inter"
            android:textSize="15sp"
            android:inputType="number"
            android:hint="@string/price"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/ImageService"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_person_24"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saved"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/inter"
        android:background="@drawable/borderbackground"
        android:text="@string/saved"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:textColor="@color/black"/>

</LinearLayout>